Add virtual midi device